AoC 2019 Day 7 Part 2 - java