@@ -2,8 +2,10 @@ import static com.github.pareronia.aoc.IntegerSequence.Range.range;
 import static com.github.pareronia.aoc.IterTools.permutations;
 
 import java.util.ArrayDeque;
+import java.util.Arrays;
 import java.util.Deque;
 import java.util.List;
+import java.util.Set;
 
 import com.github.pareronia.aoc.intcode.IntCode;
 import com.github.pareronia.aocd.Aocd;
@@ -27,38 +29,54 @@ public class AoC2019_07 extends AoCBase {
         return new AoC2019_07(input, true);
     }
     
-    private long run(final long phaseSetting, final long in) {
-        final IntCode intCode = new IntCode(false);
-        final Deque<Long> output = new ArrayDeque<>();
-        final ArrayDeque<Long> input = new ArrayDeque<>(List.of(phaseSetting, in));
-        intCode.run(this.program, input, output);
-        return output.getLast();
+    private Deque<Long> deque(final Long... items) {
+        return new ArrayDeque<>(Arrays.asList(items));
     }
     
-    private Long solve(final List<Integer> phaseSettings) {
-        final long out1 = run(phaseSettings.get(0), 0);
-        final long out2 = run(phaseSettings.get(1), out1);
-        final long out3 = run(phaseSettings.get(2), out2);
-        final long out4 = run(phaseSettings.get(3), out3);
-        return run(phaseSettings.get(4), out4);
+    @SuppressWarnings("unchecked")
+    private Long run(final List<Integer> phaseSettings) {
+        assert phaseSettings.size() == 5;
+        final Deque<Long>[] queues = range(5).intStream()
+                .mapToLong(phaseSettings::get)
+                .mapToObj(this::deque)
+                .toArray(Deque[]::new);
+        queues[0].add(0L);
+        final IntCode[] intCode = range(5).intStream()
+                .mapToObj(i -> new IntCode(false))
+                .toArray(IntCode[]::new);
+        range(5).forEach(i -> {
+            intCode[i].runTillInputRequired(this.program, queues[i], queues[(i + 1) % 5]);
+        });
+        while (!Arrays.stream(intCode).allMatch(IntCode::isHalted)) {
+            range(5).forEach(i -> {
+                intCode[i].continueTillInputRequired(queues[i], queues[(i + 1) % 5]);
+            });
+        }
+        return queues[0].getLast();
+    }
+    
+    private Long solve(final Iterable<Integer> range) {
+        return permutations(range)
+                .mapToLong(this::run)
+                .max().getAsLong();
     }
 
     @Override
     public Long solvePart1() {
-        return permutations(range(5))
-                .mapToLong(this::solve)
-                .max().getAsLong();
+        return solve(range(5));
     }
     
     @Override
     public Long solvePart2() {
-        return 0L;
+        return solve(Set.of(5, 6, 7, 8, 9));
     }
 
     public static void main(final String[] args) throws Exception {
-        assert AoC2019_07.createDebug(TEST1).solve(List.of(4, 3, 2, 1, 0)) == 43210;
-        assert AoC2019_07.createDebug(TEST2).solve(List.of(0, 1, 2, 3, 4)) == 54321;
-        assert AoC2019_07.createDebug(TEST3).solve(List.of(1, 0, 4, 3, 2)) == 65210;
+        assert AoC2019_07.createDebug(TEST1).run(List.of(4, 3, 2, 1, 0)) == 43210;
+        assert AoC2019_07.createDebug(TEST2).run(List.of(0, 1, 2, 3, 4)) == 54321;
+        assert AoC2019_07.createDebug(TEST3).run(List.of(1, 0, 4, 3, 2)) == 65210;
+        assert AoC2019_07.createDebug(TEST4).run(List.of(9, 8, 7, 6, 5)) == 139629729;
+        assert AoC2019_07.createDebug(TEST5).run(List.of(9, 7, 8, 5, 6)) == 18216;
         
         final Puzzle puzzle = Aocd.puzzle(2019, 7);
         final List<String> inputData = puzzle.getInputData();
@@ -77,5 +95,14 @@ public class AoC2019_07 extends AoCBase {
     private static final List<String> TEST3 = splitLines(
         "3,31,3,32,1002,32,10,32,1001,31,-2,31,1007,31,0,33," +
         "1002,33,7,33,1,33,31,31,1,32,31,31,4,31,99,0,0,0"
+    );
+    private static final List<String> TEST4 = splitLines(
+        "3,26,1001,26,-4,26,3,27,1002,27,2,27,1,27,26," +
+        "27,4,27,1001,28,-1,28,1005,28,6,99,0,0,5"
+    );
+    private static final List<String> TEST5 = splitLines(
+        "3,52,1001,52,-5,52,3,53,1,52,56,54,1007,54,5,55,1005,55,26,1001,54," +
+        "-5,54,1105,1,12,1,53,54,53,1008,54,0,55,1001,55,1,55,2,53,55,53,4," +
+        "53,1001,56,-1,56,1005,56,6,99,0,0,0,0,10"
     );
 }
